# Prometheus

./: .gitignore  README_LAB.md  compile_RLCA.sh  compile_cxr_fuel.sh  compile_genco.sh  compile_nmpc.sh  compile_nmpc_landing.sh  compile_rvo.sh  compile_swarm_basic.sh  compile_testpkg.sh  compile_xsugv.sh  list_large_staged_files.sh  uav_nmpc.sh  uav_nmpc2.sh
Docs/: P600实机飞行准备指南.md
Experiment/: CMakeLists.txt
Modules/common/msgs/: CMakeLists.txt
Modules/communication/: CMakeLists.txt
Modules/control/: CMakeLists.txt
Modules/control/launch/: takeoff.launch
Modules/deep_rl/: CMakeLists.txt
Modules/deep_rl/launch/: sitl_drl_test_ugv.launch
Modules/dsc_rlca/: CMakeLists.txt  package.xml  view.rviz  view_rlca.rviz
Modules/dsc_rlca/launch/: sitl_4_uav_rlca_.launch  sitl_rlca.launch
Modules/dsc_rlca/scripts/: Aircraft_math_model.py  rlca_.py  rlca_1.py  rlca_2.py  rlca_3.py  rlca_4.py  run_test.py
Modules/dsc_rlca/src/: start_formation.cpp
Modules/genco/: CMakeLists.txt  exp_view.rviz  package.xml  view.rviz
Modules/genco/genco_node/: genco_node.cpp  main.cpp  main_.cpp  main_2.cpp  nlopt_test.md  test_nlopt.cpp
Modules/genco/launch/: exp_genco.launch  exp_genco_3_uav.launch  sitl_2_uav_genco.launch  sitl_3_uav_genco.launch  sitl_4_uav.launch  sitl_4_uav_genco.launch  sitl_4_uav_genco_.launch  sitl_5_uav.launch  sitl_agent_uav.launch  sitl_test_single_uav.launch
Modules/ground_station/: CMakeLists.txt
Modules/mission/: CMakeLists.txt
Modules/nmpc_ctr/: CMakeLists.txt  package.xml
Modules/nmpc_landing/: CMakeLists.txt  package.xml  view.rviz
Modules/object_detection/: CMakeLists.txt
Modules/rvo_ros/: CMakeLists.txt  README_CN.md
Modules/slam/: CMakeLists.txt
Modules/swarm_basic/: CMakeLists.txt  package.xml
Modules/swarm_control/: CMakeLists.txt
Modules/testpkg/: CMakeLists.txt
Modules/ugv_control/: CMakeLists.txt
Modules/xsugv_c6/: README.md
Modules/xsugv_c6/src/xsugv/: CMakeLists.txt  package.xml
Modules/xsugv_c6/src/xsugv/launch/: robot.launch
Modules/xsugv_c6/src/xsugv/script/: startup.sh
Modules/xsugv_c6/src/xsugv_base/: CMakeLists.txt  package.xml
Modules/xsugv_c6/src/xsugv_base/include/xsugv_base/: xsugv_hardware.h  xsugv_interface.h
Modules/xsugv_c6/src/xsugv_base/launch/: base.launch
Modules/xsugv_c6/src/xsugv_base/src/: xsugv_base.cpp  xsugv_hardware.cpp  xsugv_interface.cpp
Modules/xsugv_c6/src/xsugv_bringup/: CMakeLists.txt  package.xml
Modules/xsugv_c6/src/xsugv_bringup/config/: rs_lidar_rshelios_config.yaml
Modules/xsugv_c6/src/xsugv_bringup/launch/: xsugv_c6.launch
Modules/xsugv_c6/src/xsugv_bringup/launch/navsat_config/: navsat.launch
Modules/xsugv_c6/src/xsugv_bringup/launch/realsense_config/: realsense.launch
Modules/xsugv_c6/src/xsugv_bringup/launch/rs_lidar_config/: rs_lidar_rshelios.launch
Modules/xsugv_c6/src/xsugv_description/: CMakeLists.txt  package.xml
Modules/xsugv_c6/src/xsugv_description/launch/: description.launch
Modules/xsugv_c6/src/xsugv_description/meshes/: gan.stl  left_wheel.stl  parking_apron.stl  plane.stl  right_wheel.stl
Modules/xsugv_c6/src/xsugv_description/meshes/accessories/: gps.stl  imu.stl  landing_pad.dae  landing_pad_aruco_1.dae  landing_pad_aruco_2.dae  landing_pad_aruco_3.dae  landing_pad_aruco_4.dae  rslidar_32b.stl  sonar.stl
Modules/xsugv_c6/src/xsugv_description/urdf/: decorations.urdf.xacro  left_wheel.urdf.xacro  right_wheel.urdf.xacro  xsugv_c6_ros.urdf.xacro  xsugv_c6_ros_vlp16.urdf.xacro
Modules/xsugv_c6/src/xsugv_description/urdf/accessories/: rslidar_32b.urdf.xacro  sonar.urdf.xacro  sonar_channel.urdf.xacro
Modules/xsugv_c6/src/xsugv_gazebo/: CMakeLists.txt  package.xml
Modules/xsugv_c6/src/xsugv_gazebo/launch/: playpen.launch  spawn_xsugv.launch  xsugv_empty_world.launch  xsugv_playpen.launch  xsugv_playpen_muti_robot.launch
Modules/xsugv_c6/src/xsugv_gazebo/worlds/: xsugv_playpen.world
Modules/xsugv_c6/src/xsugv_msgs/: CMakeLists.txt  package.xml
Modules/xsugv_c6/src/xsugv_msgs/msg/: XSUGVPartner.msg  XSUGVStatus.msg
Modules/xsugv_c6/src/xsugv_sonar/: CMakeLists.txt  package.xml
Modules/xsugv_c6/src/xsugv_sonar/src/: xsugv_sonar.cpp
Modules/xsugv_c6/src/xsugv_team_center/: CMakeLists.txt  package.xml  xsugv_rviz_plugins.xml
Modules/xsugv_c6/src/xsugv_team_center/include/xsugv_team_center/ros_master_relay/: ros_master_relay.h
Modules/xsugv_c6/src/xsugv_team_center/include/xsugv_team_center/rviz_plugins/: item_widget.h  xsugv_center_panel.h
Modules/xsugv_c6/src/xsugv_team_center/launch/: xsugv_center.launch
Modules/xsugv_c6/src/xsugv_team_center/rviz/: xsugv_center.rviz
Modules/xsugv_c6/src/xsugv_team_center/src/ros_master_relay/: ros_master_relay.cpp  ros_master_relay_node.cpp
Modules/xsugv_c6/src/xsugv_team_center/src/rviz_plugins/: item_widget.cpp  xsugv_center_panel.cpp
Modules/xsugv_c6/src/xsugv_team_center/srv/: RosMasterRelayComm.srv
Modules/xsugv_c6/src/xsugv_team_interface/: CMakeLists.txt  package.xml
Modules/xsugv_c6/src/xsugv_team_interface/include/xsugv_team_interface/: xsugv_team_interface.h
Modules/xsugv_c6/src/xsugv_team_interface/launch/: team.launch
Modules/xsugv_c6/src/xsugv_team_interface/src/: xsugv_team_interface.cpp  xsugv_team_node.cpp
Modules/xsugv_c6/src/xsugv_viz/: CMakeLists.txt  package.xml
Modules/xsugv_c6/src/xsugv_viz/launch/: load_robot_model.launch  view_model.launch  view_muti_model.launch  view_robot.launch
Modules/xsugv_c6/src/xsugv_viz/rviz/: muti_model.rviz  robot.rviz
Scripts/SAC/: sac_network.py  train_sac.py
Scripts/SAC_cnn/: sac_network.py  train_sac.py  velodyne_env.py
testpkg/: CMakeLists.txt  package.xml
testpkg/config/experiment_config/: px4_sender_outdoor.yaml
testpkg/launch/applications/: app_ego_planner.launch
testpkg/launch/env/: exp_mavros_lidar.launch  sitl_mavros_lidar.launch  sitl_swarm_manager.launch
testpkg/launch/include/: advanced_param.xml  tf_transform_gps.launch
testpkg/scripts/: laser2pcl_inflate.py
testpkg/src/: apf_terminal_node.cpp  ego_terminal_node.cpp  laser2pcl_node.cpp  motion_follow_node.cpp
(+284 files in other folders)
