<?xml version="1.0"?>
<package>
  <name>xsugv</name>
  <version>0.0.1</version>
  <description>XSUGV</description>

  <author email="xiaolijun@xingshentech.com">XiaoLijun</author>
  <maintainer email="xiaolijun@xingshentech.com">XiaoLijun</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export></export>
</package>
