<?xml version="1.0"?>
<package>
  <name>xsugv_bringup</name>
  <version>0.0.1</version>
  <description>Clearpath XSUGV installation and integration package</description>

  <author email="Xingshen@xingshentech.com">Xingshen</author>
  <maintainer email="Xingshen@xingshentech.com">Xingshen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>xsugv_base</run_depend>
  <run_depend>xsugv_control</run_depend>
  <run_depend>xsugv_description</run_depend>
  <run_depend>imu_filter_madgwick</run_depend>
  <run_depend>imu_transformer</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>microstrain_3dmgx2_imu</run_depend>
  <run_depend>microstrain_mips</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>realsense2_camera</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>robot_upstart</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>um6</run_depend>
  <run_depend>um7</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>

  <export>
  </export>
</package>
