<?xml version="1.0"?>
<package>
  <name>xsugv_gazebo</name>
  <version>0.0.1</version>
  <description>XSUGV C6-ROS Simulator bringup</description>

  <author email="xiaolijun@xingshentech.com">XiaoLijun</author>

  <maintainer email="xiaolijun@xingshentech.com">XiaoLijun</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>xsugv_control</run_depend>
  <run_depend>xsugv_description</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>velodyne_gazebo_plugins</run_depend>

  <export>
  </export>
</package>
