<?xml version="1.0"?>
<package>
  <name>xsugv_msgs</name>
  <version>0.0.1</version>
  <description>Messages for XSUGV C6-ROS</description>

  <author email="xiaolijun@xingshentech.com">XiaoLijun</author>

  <maintainer email="xiaolijun@xingshentech.com">XiaoLijun</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
