<?xml version="1.0"?>
<package>
  <name>xsugv_sonar</name>
  <version>0.0.1</version>
  <description>XSUGV Sonar Driver</description>

  <author email="xiaolijun@xingshentech.com">XiaoLijun</author>
  <maintainer email="xiaolijun@xingshentech.com">XiaoLijun</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export></export>
</package>
