<?xml version="1.0"?>
<package>
  <name>xsugv_team_interface</name>
  <version>0.0.1</version>
  <description>XSUGV C6-ROS Team Interface</description>

  <author email="xiaolijun@xingshentech.com">XiaoLijun</author>
  <maintainer email="xiaolijun@xingshentech.com">XiaoLijun</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>xsugv_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>xsugv_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export></export>
</package>
